# science-template

./: Makefile  README.md  example_tree.txt  pyproject.toml
science_template/: run.py
